# cert-tracker

./: .gitignore  pyproject.toml
backend/: README.md  pyproject.toml
backend/app/: cli.py  main.py  services.py
backend/app/api/: cert_tracker_api.py  cert_tracker_cache.py
backend/app/data/: business_names_with_contacts_course_with_dates.csv
backend/app/data_accessor/: course_handler.py  csv_handler.py  employee_certificate_handler.py  employee_handler.py
backend/app/data_models/: course.py  employee_certificate.py
backend/app/data_processor/: cert_tracker_service.py
backend/project_root/app/: main.py  server.py
backend/project_root/app/api/: cert_tracker_api.py  cert_tracker_app.py  cert_tracker_cache.py
backend/project_root/app/data_accessor/: company_handler.py  course_handler.py  csv_handler.py  employee_certificate_handler.py  employee_handler.py
backend/project_root/app/data_accessor/interfaces/: company_handler_interface.py  course_handler_interface.py  employee_certificate_handler_interface.py  employee_handler_interface.py
backend/project_root/app/data_accessor/pandas/: company_handler.py  course_handler.py  employee_handler.py  (+2 more)
backend/project_root/app/data_models/: company.py  course.py  employee.py  employee_certificate.py
backend/project_root/app/data_processor/: cert_tracker_service.py
backend/project_root/tests/data_accessor/: test_company_handler.py  test_course_handler.py  test_csv_handler.py  test_employee_certificate_handler.py  test_employee_handler.py
backend/project_root/tests/data_processor/: test_cert_tracker_service.py
(+5 files in other folders)
