[project]
name = "cert-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "typer>=0.15.3",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.9",
    "pip-audit>=2.9.0",
]
